--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "password",
-    "database": "test",
+    "database": "test2",
     "host": "localhost",
     "dialect": "mysql"
   },
