--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "random-username-generator": "^1.0.4",
     "sequelize": "^6.25.5",
     "sequelize-cli": "^6.5.2"
   }
